// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AC-021 canonical outputs for all 11 deterministic rules > CONTENT-COVERAGE-001 snapshots actual pass/candidate/missing/edge RuleResult output 1`] = `
{
  "candidate": {
    "candidates": [
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "No indexable page covers the core intent tokens of "team collaboration".",
            "grade": "C",
            "limitation": "Intent match is an English-only heuristic over URL/title/H1 tokens.",
            "method": "inferred",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "derived",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "page_set:offer:team-collaboration",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "kind": "offer",
          "target": "team collaboration",
        },
        "severity": "high",
        "subjectRefs": [
          "page_set:offer:team-collaboration",
        ],
        "target": {
          "members": [],
          "relation": "affected_by_page_set",
          "targetKind": "page_set",
          "targetRef": "offer:team-collaboration",
          "version": 1,
        },
        "titleArgs": {
          "kind": "offer",
          "target": "team collaboration",
        },
      },
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "No indexable page covers the core intent tokens of "remote onboarding".",
            "grade": "C",
            "limitation": "Intent match is an English-only heuristic over URL/title/H1 tokens.",
            "method": "inferred",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "derived",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "page_set:use_case:remote-onboarding",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "kind": "use_case",
          "target": "remote onboarding",
        },
        "severity": "high",
        "subjectRefs": [
          "page_set:use_case:remote-onboarding",
        ],
        "target": {
          "members": [],
          "relation": "affected_by_page_set",
          "targetKind": "page_set",
          "targetRef": "use_case:remote-onboarding",
          "version": 1,
        },
        "titleArgs": {
          "kind": "use_case",
          "target": "remote onboarding",
        },
      },
    ],
    "status": "candidate",
  },
  "edge": {
    "reason": "intent_match_unavailable",
    "status": "inconclusive",
  },
  "missing": {
    "reason": "missing_dataset",
    "status": "skipped",
  },
  "pass": {
    "metrics": {
      "coveredCount": 1,
    },
    "status": "pass",
  },
}
`;

exports[`AC-021 canonical outputs for all 11 deterministic rules > CONTENT-GAP-011 snapshots actual pass/candidate/missing/edge RuleResult output 1`] = `
{
  "candidate": {
    "candidates": [
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "After semantic demand de-duplication, the user-provided CSV source contributes 10 keywords with 1400 combined available monthly search volume to cluster "project-management".",
            "grade": "C",
            "limitation": "Search volume is user-provided CSV data; clustering is a heuristic over the imported rows. Rows without reported search volume are excluded from this provider's volume sum.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "user_provided",
            "sourceProvider": "csv",
            "subjectRefs": [
              "keyword_cluster:project-management",
            ],
            "support": "supports",
          },
          {
            "availability": "available",
            "claim": "No indexable page relates to the "project-management" keyword cluster.",
            "grade": "C",
            "limitation": "Intent match is an English-only heuristic over URL/title/H1 tokens.",
            "method": "inferred",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "derived",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "keyword_cluster:project-management",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "clusterKey": "project-management",
          "keywordCount": 10,
          "totalVolume": 1400,
        },
        "severity": "high",
        "subjectRefs": [
          "keyword_cluster:project-management",
        ],
        "target": {
          "members": [],
          "relation": "affected_by_keyword_cluster",
          "targetKind": "keyword_cluster",
          "targetRef": "project-management",
          "version": 1,
        },
        "titleArgs": {
          "clusterKey": "project-management",
          "keywordCount": 10,
          "totalVolume": 1400,
        },
      },
    ],
    "status": "candidate",
  },
  "edge": {
    "candidates": [
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "After semantic demand de-duplication, the user-provided CSV source contributes 10 keywords with 500 combined available monthly search volume to cluster "exact-threshold".",
            "grade": "C",
            "limitation": "Search volume is user-provided CSV data; clustering is a heuristic over the imported rows. Rows without reported search volume are excluded from this provider's volume sum.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "user_provided",
            "sourceProvider": "csv",
            "subjectRefs": [
              "keyword_cluster:exact-threshold",
            ],
            "support": "supports",
          },
          {
            "availability": "available",
            "claim": "No indexable page relates to the "exact-threshold" keyword cluster.",
            "grade": "C",
            "limitation": "Intent match is an English-only heuristic over URL/title/H1 tokens.",
            "method": "inferred",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "derived",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "keyword_cluster:exact-threshold",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "clusterKey": "exact-threshold",
          "keywordCount": 10,
          "totalVolume": 500,
        },
        "severity": "high",
        "subjectRefs": [
          "keyword_cluster:exact-threshold",
        ],
        "target": {
          "members": [],
          "relation": "affected_by_keyword_cluster",
          "targetKind": "keyword_cluster",
          "targetRef": "exact-threshold",
          "version": 1,
        },
        "titleArgs": {
          "clusterKey": "exact-threshold",
          "keywordCount": 10,
          "totalVolume": 500,
        },
      },
    ],
    "status": "candidate",
  },
  "missing": {
    "reason": "missing_dataset",
    "status": "skipped",
  },
  "pass": {
    "metrics": {
      "qualifyingClusters": 1,
    },
    "status": "pass",
  },
}
`;

exports[`AC-021 canonical outputs for all 11 deterministic rules > CRO-LANDING-003 snapshots actual pass/candidate/missing/edge RuleResult output 1`] = `
{
  "candidate": {
    "candidates": [
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "Landing page converts key events at 4.00% of sessions versus the 7.27% site baseline (below 70% of baseline).",
            "grade": "A",
            "limitation": "Conversion rate uses GA4 key events under the project's key-event mapping; pages with unmapped key events are excluded and only pages with at least 500 sessions are evaluated.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "first_party",
            "sourceProvider": "ga4",
            "subjectRefs": [
              "https://example.com/pricing",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "baseline": 0.07272727272727272,
          "keyEvents": 40,
          "pageRate": 0.04,
          "sessions": 1000,
        },
        "severity": "high",
        "subjectRefs": [
          "https://example.com/pricing",
        ],
        "target": {
          "members": [
            {
              "basisKind": "observation_site_page",
              "memberRef": "https://example.com/pricing",
              "observationId": "81e690ea-107d-4083-8d20-c4fd09677a2a",
              "pageSnapshotId": null,
              "resolutionState": "resolved",
              "sitePageId": "3cdaa70a-52ec-467b-8570-fb0068f394a2",
              "sitePageUrl": "https://example.com/pricing",
              "snapshotId": "eda231f2-ddd9-40ca-862c-b4786c3a622d",
            },
          ],
          "relation": "direct_url",
          "targetKind": "url",
          "targetRef": "https://example.com/pricing",
          "version": 1,
        },
        "titleArgs": {
          "baseline": "7.27%",
          "pageRate": "4.00%",
        },
      },
    ],
    "status": "candidate",
  },
  "edge": {
    "reason": "ga4_baseline_unavailable",
    "status": "inconclusive",
  },
  "missing": {
    "reason": "missing_dataset",
    "status": "skipped",
  },
  "pass": {
    "metrics": {
      "baseline": 0.095,
      "evaluatedKeyEvents": 190,
      "evaluatedSessions": 2000,
    },
    "status": "pass",
  },
}
`;

exports[`AC-021 canonical outputs for all 11 deterministic rules > CRO-PATH-001 snapshots actual pass/candidate/missing/edge RuleResult output 1`] = `
{
  "candidate": {
    "candidates": [
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "1 commercial page(s) have no direct internal link to any of the 1 conversion destination(s).",
            "grade": "B",
            "limitation": "Internal-link coverage reflects only pages reached in this crawl; pages beyond crawl depth or excluded from crawling are not represented.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "direct_public",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "https://example.com/product",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "affectedCount": 1,
          "destinationCount": 1,
        },
        "severity": "high",
        "subjectRefs": [
          "page_set:missing_conversion_path",
        ],
        "target": {
          "members": [
            {
              "basisKind": "crawl_exact_fetch",
              "memberRef": "https://example.com/product",
              "observationId": "80f8cc58-9c7e-45ce-8a5f-a16e4a42f9e6",
              "pageSnapshotId": "990229e5-d004-48cf-8159-a3f72ab3a276",
              "resolutionState": "resolved",
              "sitePageId": "7f8d7c82-766b-425f-8a2b-8b59f8f6aec7",
              "sitePageUrl": "https://example.com/product",
              "snapshotId": "c509ae79-3992-4761-83ac-21d761ed9530",
            },
          ],
          "relation": "affected_by_page_set",
          "targetKind": "page_set",
          "targetRef": "missing_conversion_path",
          "version": 1,
        },
        "titleArgs": {
          "affectedCount": 1,
          "destinationCount": 1,
        },
      },
    ],
    "status": "candidate",
  },
  "edge": {
    "reason": "not_applicable",
    "status": "skipped",
  },
  "missing": {
    "reason": "missing_dataset",
    "status": "skipped",
  },
  "pass": {
    "metrics": {
      "affectedCount": 0,
      "destinationCount": 1,
    },
    "status": "pass",
  },
}
`;

exports[`AC-021 canonical outputs for all 11 deterministic rules > GEO-CRAWLER-002 snapshots actual pass/candidate/missing/edge RuleResult output 1`] = `
{
  "candidate": {
    "candidates": [
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "robots.txt disallows the whole site ("Disallow: /") for OAI-SearchBot.",
            "grade": "B",
            "limitation": "robots.txt directives are observed as published; individual crawler behavior may differ.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "direct_public",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "user_agent:OAI-SearchBot",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "scope": "site",
          "userAgent": "OAI-SearchBot",
        },
        "severity": "high",
        "subjectRefs": [
          "user_agent:OAI-SearchBot",
        ],
        "target": {
          "members": [],
          "relation": "affected_by_user_agent",
          "targetKind": "user_agent",
          "targetRef": "OAI-SearchBot",
          "version": 1,
        },
        "titleArgs": {
          "rule": "/",
          "scope": "site",
          "userAgent": "OAI-SearchBot",
        },
      },
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "robots.txt disallows the whole site ("Disallow: /") for ChatGPT-User.",
            "grade": "B",
            "limitation": "robots.txt directives are observed as published; individual crawler behavior may differ.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "direct_public",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "user_agent:ChatGPT-User",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "scope": "site",
          "userAgent": "ChatGPT-User",
        },
        "severity": "high",
        "subjectRefs": [
          "user_agent:ChatGPT-User",
        ],
        "target": {
          "members": [],
          "relation": "affected_by_user_agent",
          "targetKind": "user_agent",
          "targetRef": "ChatGPT-User",
          "version": 1,
        },
        "titleArgs": {
          "rule": "/",
          "scope": "site",
          "userAgent": "ChatGPT-User",
        },
      },
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "robots.txt disallows the whole site ("Disallow: /") for PerplexityBot.",
            "grade": "B",
            "limitation": "robots.txt directives are observed as published; individual crawler behavior may differ.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "direct_public",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "user_agent:PerplexityBot",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "scope": "site",
          "userAgent": "PerplexityBot",
        },
        "severity": "high",
        "subjectRefs": [
          "user_agent:PerplexityBot",
        ],
        "target": {
          "members": [],
          "relation": "affected_by_user_agent",
          "targetKind": "user_agent",
          "targetRef": "PerplexityBot",
          "version": 1,
        },
        "titleArgs": {
          "rule": "/",
          "scope": "site",
          "userAgent": "PerplexityBot",
        },
      },
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "robots.txt disallows the whole site ("Disallow: /") for ClaudeBot.",
            "grade": "B",
            "limitation": "robots.txt directives are observed as published; individual crawler behavior may differ.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "direct_public",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "user_agent:ClaudeBot",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "scope": "site",
          "userAgent": "ClaudeBot",
        },
        "severity": "high",
        "subjectRefs": [
          "user_agent:ClaudeBot",
        ],
        "target": {
          "members": [],
          "relation": "affected_by_user_agent",
          "targetKind": "user_agent",
          "targetRef": "ClaudeBot",
          "version": 1,
        },
        "titleArgs": {
          "rule": "/",
          "scope": "site",
          "userAgent": "ClaudeBot",
        },
      },
    ],
    "status": "candidate",
  },
  "edge": {
    "candidates": [
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "robots.txt disallows the whole site ("Disallow: /") for OAI-SearchBot.",
            "grade": "B",
            "limitation": "robots.txt directives are observed as published; individual crawler behavior may differ.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "direct_public",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "user_agent:OAI-SearchBot",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "scope": "site",
          "userAgent": "OAI-SearchBot",
        },
        "severity": "high",
        "subjectRefs": [
          "user_agent:OAI-SearchBot",
        ],
        "target": {
          "members": [],
          "relation": "affected_by_user_agent",
          "targetKind": "user_agent",
          "targetRef": "OAI-SearchBot",
          "version": 1,
        },
        "titleArgs": {
          "rule": "/",
          "scope": "site",
          "userAgent": "OAI-SearchBot",
        },
      },
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "robots.txt disallows the whole site ("Disallow: /") for ChatGPT-User.",
            "grade": "B",
            "limitation": "robots.txt directives are observed as published; individual crawler behavior may differ.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "direct_public",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "user_agent:ChatGPT-User",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "scope": "site",
          "userAgent": "ChatGPT-User",
        },
        "severity": "high",
        "subjectRefs": [
          "user_agent:ChatGPT-User",
        ],
        "target": {
          "members": [],
          "relation": "affected_by_user_agent",
          "targetKind": "user_agent",
          "targetRef": "ChatGPT-User",
          "version": 1,
        },
        "titleArgs": {
          "rule": "/",
          "scope": "site",
          "userAgent": "ChatGPT-User",
        },
      },
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "robots.txt disallows the whole site ("Disallow: /") for PerplexityBot.",
            "grade": "B",
            "limitation": "robots.txt directives are observed as published; individual crawler behavior may differ.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "direct_public",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "user_agent:PerplexityBot",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "scope": "site",
          "userAgent": "PerplexityBot",
        },
        "severity": "high",
        "subjectRefs": [
          "user_agent:PerplexityBot",
        ],
        "target": {
          "members": [],
          "relation": "affected_by_user_agent",
          "targetKind": "user_agent",
          "targetRef": "PerplexityBot",
          "version": 1,
        },
        "titleArgs": {
          "rule": "/",
          "scope": "site",
          "userAgent": "PerplexityBot",
        },
      },
    ],
    "status": "candidate",
  },
  "missing": {
    "reason": "missing_dataset",
    "status": "skipped",
  },
  "pass": {
    "metrics": {
      "blockedBotCount": 0,
      "robotsFetched": 1,
    },
    "status": "pass",
  },
}
`;

exports[`AC-021 canonical outputs for all 11 deterministic rules > GEO-ENTITY-001 snapshots actual pass/candidate/missing/edge RuleResult output 1`] = `
{
  "candidate": {
    "candidates": [
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "Of 2 priority/commercial page(s), 2 expose no structured entity types and 0 contain a proof block (proof coverage 0%).",
            "grade": "C",
            "limitation": "Entity/proof detection is an English-only heuristic.",
            "method": "inferred",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "derived",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "https://example.com/pricing",
              "https://example.com/product",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "entityMissingCount": 2,
          "proofCoverageRatio": 0,
          "selectedCount": 2,
        },
        "severity": "high",
        "subjectRefs": [
          "page_set:priority_commercial",
        ],
        "target": {
          "members": [
            {
              "basisKind": "crawl_exact_fetch",
              "memberRef": "https://example.com/pricing",
              "observationId": "966cfb54-7a2b-4e73-85d6-083d098f65eb",
              "pageSnapshotId": "8f954428-0089-4434-8f12-5e53267c96c6",
              "resolutionState": "resolved",
              "sitePageId": "3cdaa70a-52ec-467b-8570-fb0068f394a2",
              "sitePageUrl": "https://example.com/pricing",
              "snapshotId": "d4937cd9-1723-43ca-87e8-ff70b849c099",
            },
            {
              "basisKind": "crawl_exact_fetch",
              "memberRef": "https://example.com/product",
              "observationId": "703309c7-de5d-4d08-8c83-855ce2b9d5e1",
              "pageSnapshotId": "a1694a5c-73c1-45da-8c74-f951c59a36c6",
              "resolutionState": "resolved",
              "sitePageId": "7f8d7c82-766b-425f-8a2b-8b59f8f6aec7",
              "sitePageUrl": "https://example.com/product",
              "snapshotId": "44f8e1a4-4e54-41ea-8e27-ec5869ce1068",
            },
          ],
          "relation": "affected_by_page_set",
          "targetKind": "page_set",
          "targetRef": "priority_commercial",
          "version": 1,
        },
        "titleArgs": {
          "entityMissingCount": 2,
          "proofCoveragePercent": 0,
          "selectedCount": 2,
        },
      },
    ],
    "status": "candidate",
  },
  "edge": {
    "reason": "proof_detector_english_only",
    "status": "inconclusive",
  },
  "missing": {
    "reason": "missing_dataset",
    "status": "skipped",
  },
  "pass": {
    "metrics": {
      "entityMissingCount": 0,
      "proofCoverageRatio": 1,
      "selectedCount": 2,
    },
    "status": "pass",
  },
}
`;

exports[`AC-021 canonical outputs for all 11 deterministic rules > SEARCH-CTR-004 snapshots actual pass/candidate/missing/edge RuleResult output 1`] = `
{
  "candidate": {
    "candidates": [
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "Impression-weighted CTR 1.00% at average position 3.0 is below the positional benchmark 10.00% (under-performance threshold 5.00%). Top queries by impressions: alpha (900 impr), beta (400 impr).",
            "grade": "A",
            "limitation": "Search Console returns top rows by clicks, not the full query universe.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "first_party",
            "sourceProvider": "gsc",
            "subjectRefs": [
              "https://example.com/product",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "benchmark": 0.1,
          "clicks": 20,
          "ctr": 0.01,
          "impressions": 2000,
          "position": 3,
        },
        "severity": "high",
        "subjectRefs": [
          "https://example.com/product",
        ],
        "target": {
          "members": [
            {
              "basisKind": "observation_site_page",
              "memberRef": "https://example.com/product",
              "observationId": "a149e979-97d1-4794-87e9-4088c7cee59b",
              "pageSnapshotId": null,
              "resolutionState": "resolved",
              "sitePageId": "7f8d7c82-766b-425f-8a2b-8b59f8f6aec7",
              "sitePageUrl": "https://example.com/product",
              "snapshotId": "3d46e03e-0547-46c2-84b8-4eb3fdc5500d",
            },
          ],
          "relation": "direct_url",
          "targetKind": "url",
          "targetRef": "https://example.com/product",
          "version": 1,
        },
        "titleArgs": {
          "ctr": "1.00%",
          "position": "3.0",
        },
      },
    ],
    "status": "candidate",
  },
  "edge": {
    "metrics": {
      "pagesEvaluated": 1,
      "triggered": 0,
    },
    "status": "pass",
  },
  "missing": {
    "reason": "missing_dataset",
    "status": "skipped",
  },
  "pass": {
    "metrics": {
      "pagesEvaluated": 1,
      "triggered": 0,
    },
    "status": "pass",
  },
}
`;

exports[`AC-021 canonical outputs for all 11 deterministic rules > SEARCH-DECAY-002 snapshots actual pass/candidate/missing/edge RuleResult output 1`] = `
{
  "candidate": {
    "candidates": [
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "Search clicks fell from 200 in the previous 28 days to 100 in the current 28 days, a -50.0% change.",
            "grade": "A",
            "limitation": "Search Console returns top rows by clicks, not the full query universe.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "first_party",
            "sourceProvider": "gsc",
            "subjectRefs": [
              "https://example.com/product",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "currentClicks": 100,
          "delta": -0.5,
          "previousClicks": 200,
        },
        "severity": "high",
        "subjectRefs": [
          "https://example.com/product",
        ],
        "target": {
          "members": [
            {
              "basisKind": "observation_site_page",
              "memberRef": "https://example.com/product",
              "observationId": "7c7e633d-41d9-4d01-86a6-332c78b8b41f",
              "pageSnapshotId": null,
              "resolutionState": "resolved",
              "sitePageId": "7f8d7c82-766b-425f-8a2b-8b59f8f6aec7",
              "sitePageUrl": "https://example.com/product",
              "snapshotId": "6be55c85-8254-465a-86a2-f733cf35bfd9",
            },
          ],
          "relation": "direct_url",
          "targetKind": "url",
          "targetRef": "https://example.com/product",
          "version": 1,
        },
        "titleArgs": {
          "delta": "50.0%",
        },
      },
    ],
    "status": "candidate",
  },
  "edge": {
    "candidates": [
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "Search clicks fell from 100 in the previous 28 days to 80 in the current 28 days, a -20.0% change.",
            "grade": "A",
            "limitation": "Search Console returns top rows by clicks, not the full query universe.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "first_party",
            "sourceProvider": "gsc",
            "subjectRefs": [
              "https://example.com/threshold",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "currentClicks": 80,
          "delta": -0.2,
          "previousClicks": 100,
        },
        "severity": "medium",
        "subjectRefs": [
          "https://example.com/threshold",
        ],
        "target": {
          "members": [
            {
              "basisKind": "observation_site_page",
              "memberRef": "https://example.com/threshold",
              "observationId": "816f8e92-909d-48b7-8b3a-e9c26d408c29",
              "pageSnapshotId": null,
              "resolutionState": "resolved",
              "sitePageId": "ebf28528-f290-43a8-8abe-15210c5ff2c1",
              "sitePageUrl": "https://example.com/threshold",
              "snapshotId": "b0f96d0d-f12a-4913-87bc-6c118d2fd514",
            },
          ],
          "relation": "direct_url",
          "targetKind": "url",
          "targetRef": "https://example.com/threshold",
          "version": 1,
        },
        "titleArgs": {
          "delta": "20.0%",
        },
      },
    ],
    "status": "candidate",
  },
  "missing": {
    "reason": "missing_dataset",
    "status": "skipped",
  },
  "pass": {
    "metrics": {
      "pagesEvaluated": 1,
      "triggered": 0,
    },
    "status": "pass",
  },
}
`;

exports[`AC-021 canonical outputs for all 11 deterministic rules > TECH-CANONICAL-002 snapshots actual pass/candidate/missing/edge RuleResult output 1`] = `
{
  "candidate": {
    "candidates": [
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "2 page(s) form reciprocal canonical loops.",
            "grade": "B",
            "limitation": "Canonical relationships reflect the crawl snapshot's HTML; rel=canonical is a hint a search engine may override.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "direct_public",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "https://example.com/a",
              "https://example.com/b",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "count": 2,
        },
        "severity": "medium",
        "subjectRefs": [
          "canonical_issue:reciprocal",
        ],
        "target": {
          "members": [
            {
              "basisKind": "crawl_exact_fetch",
              "memberRef": "https://example.com/a",
              "observationId": "2fe7ca30-eed2-4e79-8570-f427257a98b0",
              "pageSnapshotId": "b108b269-6db5-4845-8133-a390d0e98f45",
              "resolutionState": "resolved",
              "sitePageId": "068dc0e0-5fbe-4c7d-81c5-c1343e29bfda",
              "sitePageUrl": "https://example.com/a",
              "snapshotId": "993499cb-8e67-4c03-86ad-1eb5ace22df2",
            },
            {
              "basisKind": "crawl_exact_fetch",
              "memberRef": "https://example.com/b",
              "observationId": "dbb17194-4044-4efb-8e56-6a45648611fe",
              "pageSnapshotId": "36c3a342-a2b9-4d04-823e-ebe225a982cd",
              "resolutionState": "resolved",
              "sitePageId": "320c6566-a166-4df7-8c69-e01c5d5e2015",
              "sitePageUrl": "https://example.com/b",
              "snapshotId": "537a93a8-3dfd-43e9-8c6f-47b8976b1bb4",
            },
          ],
          "relation": "affected_by_canonical_issue",
          "targetKind": "canonical_issue",
          "targetRef": "reciprocal",
          "version": 1,
        },
        "titleArgs": {
          "count": 2,
          "subtype": "reciprocal",
        },
      },
    ],
    "status": "candidate",
  },
  "edge": {
    "metrics": {
      "canonicalIssues": 0,
    },
    "status": "pass",
  },
  "missing": {
    "reason": "missing_dataset",
    "status": "skipped",
  },
  "pass": {
    "metrics": {
      "canonicalIssues": 0,
    },
    "status": "pass",
  },
}
`;

exports[`AC-021 canonical outputs for all 11 deterministic rules > TECH-HTTP-001 snapshots actual pass/candidate/missing/edge RuleResult output 1`] = `
{
  "candidate": {
    "candidates": [
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "1 crawled page(s) returned HTTP 404.",
            "grade": "B",
            "limitation": "Status reflects a single crawl fetch of each URL, not every request path, method, or geography.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "direct_public",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "https://example.com/pricing",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "count": 1,
          "statusCode": 404,
        },
        "severity": "high",
        "subjectRefs": [
          "http_status:404",
        ],
        "target": {
          "members": [
            {
              "basisKind": "crawl_exact_fetch",
              "memberRef": "https://example.com/pricing",
              "observationId": "d3fe2a6f-69be-41ef-8a37-5d1f4c938057",
              "pageSnapshotId": "69a04244-2ef3-4b38-8148-7e1ef78dfec1",
              "resolutionState": "resolved",
              "sitePageId": "3cdaa70a-52ec-467b-8570-fb0068f394a2",
              "sitePageUrl": "https://example.com/pricing",
              "snapshotId": "83d284e9-a45d-4cca-8566-acf1fff995ee",
            },
          ],
          "relation": "affected_by_http_status",
          "targetKind": "http_status",
          "targetRef": "404",
          "version": 1,
        },
        "titleArgs": {
          "count": 1,
          "status": 404,
        },
      },
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "1 crawled page(s) returned HTTP 500.",
            "grade": "B",
            "limitation": "Status reflects a single crawl fetch of each URL, not every request path, method, or geography.",
            "method": "observed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "direct_public",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "https://example.com/about",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "count": 1,
          "statusCode": 500,
        },
        "severity": "high",
        "subjectRefs": [
          "http_status:500",
        ],
        "target": {
          "members": [
            {
              "basisKind": "crawl_exact_fetch",
              "memberRef": "https://example.com/about",
              "observationId": "39d5c1d9-4008-4956-8fa8-85fb4f41db78",
              "pageSnapshotId": "df76d929-6717-4c9b-8e78-5073929a8c4b",
              "resolutionState": "resolved",
              "sitePageId": "9d6225b3-488e-4752-8c81-a5ca247c0d0a",
              "sitePageUrl": "https://example.com/about",
              "snapshotId": "1859e76a-9e3f-486e-8618-15dd30f54a51",
            },
          ],
          "relation": "affected_by_http_status",
          "targetKind": "http_status",
          "targetRef": "500",
          "version": 1,
        },
        "titleArgs": {
          "count": 1,
          "status": 500,
        },
      },
    ],
    "status": "candidate",
  },
  "edge": {
    "metrics": {
      "brokenCount": 0,
    },
    "status": "pass",
  },
  "missing": {
    "reason": "missing_dataset",
    "status": "skipped",
  },
  "pass": {
    "metrics": {
      "brokenCount": 0,
    },
    "status": "pass",
  },
}
`;

exports[`AC-021 canonical outputs for all 11 deterministic rules > TECH-LINKGRAPH-005 snapshots actual pass/candidate/missing/edge RuleResult output 1`] = `
{
  "candidate": {
    "candidates": [
      {
        "evidence": [
          {
            "availability": "available",
            "claim": "1 commercial page(s) receive fewer than 2 internal inlinks.",
            "grade": "B",
            "limitation": "Inlink counts are derived from the crawled internal outlinks only; links from uncrawled pages are not counted.",
            "method": "computed",
            "observedAt": "2026-07-18T00:00:00.000Z",
            "origin": "derived",
            "sourceProvider": "crawl",
            "subjectRefs": [
              "https://example.com/pricing",
            ],
            "support": "supports",
          },
        ],
        "metrics": {
          "affectedCount": 1,
        },
        "severity": "high",
        "subjectRefs": [
          "page_set:low_internal_inlinks",
        ],
        "target": {
          "members": [
            {
              "basisKind": "crawl_exact_fetch",
              "memberRef": "https://example.com/pricing",
              "observationId": "b25d81a8-bec0-47a1-8790-98d8ac592710",
              "pageSnapshotId": "40e3de3f-5eaa-4232-810f-787d62b66bba",
              "resolutionState": "resolved",
              "sitePageId": "3cdaa70a-52ec-467b-8570-fb0068f394a2",
              "sitePageUrl": "https://example.com/pricing",
              "snapshotId": "f3fc340e-5fe8-47a2-8a43-b2d298009828",
            },
          ],
          "relation": "affected_by_page_set",
          "targetKind": "page_set",
          "targetRef": "low_internal_inlinks",
          "version": 1,
        },
        "titleArgs": {
          "affectedCount": 1,
        },
      },
    ],
    "status": "candidate",
  },
  "edge": {
    "reason": "partial_crawl_incomplete_link_graph",
    "status": "inconclusive",
  },
  "missing": {
    "reason": "missing_dataset",
    "status": "skipped",
  },
  "pass": {
    "metrics": {
      "affectedCount": 0,
    },
    "status": "pass",
  },
}
`;
